add searching photos in lab04